chore: files are moved

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Chronodex</title>
-    <meta name="description" content="Fancy description..." />
-    <link rel="stylesheet" href="style.css" />
+    <meta name="description" content="Cronodex planner" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
     <div id="stories"></div>
-    <script src="9.2.1_konva.min.js"></script>
+    <script src="scripts/9.2.1_konva.min.js"></script>
     <div id="container">
       <p>Canvas error!</p>
     </div>
@@ -31,9 +31,7 @@
       </div>
     </div>
 
-
-
-    <script src="script.js"></script>
-    <script src="list.js"></script>
+    <script src="scripts/script.js"></script>
+    <script src="scripts/list.js"></script>
   </body>
 </html>
